fix overflowing in mobile screen

--- a/src/sass/_resets.scss
+++ b/src/sass/_resets.scss
@@ -2,6 +2,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  @media screen and (max-width: 390px) {
+    overflow-x: hidden;
+  }
 }
 
 a {
